@@ -1,5 +1,12 @@
 2018-09-06  Will Schmidt  <will_schmidt@vnet.ibm.com>
 
+	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add support for
+	early gimple folding of vec_splat().
+	* tree-vect-generic.c: Remove static from tree_vec_extract() definition.
+	* gimple-fold.h: Add an extern define for tree_vec_extract().
+
+2018-09-06  Will Schmidt  <will_schmidt@vnet.ibm.com>
+
 	* config/rs6000/rs6000.c (fold_mergehl_helper): Add types_compatible_p
 	wrappers around TREE_TYPE comparisons.
 
